[package]
name = "esx_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esx_lib = { path = "../esx_lib" }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
bytes = "1.6"

[profile.dev]
opt-level = 0

