[package]
name = "esx_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = {version = "1.5", features = ["serde"]}
flate2 = {version = "1.0", features = ["zlib"]} 
serde = {version = "1.0", features = ["derive"]}